--- a/public/css/new-age.css
+++ b/public/css/new-age.css
@@ -155,7 +155,7 @@ header {
   /* fallback for old browsers */
   background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: url("../img/twohos.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: url("../img/ppl.jpeg"), linear-gradient(to left, #7b4397, #dc2430);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
 }
@@ -304,7 +304,7 @@ section.cta {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/ppl.jpeg');
+  background-image: url('../img/twohos.jpeg');
   padding: 250px 0;
 }
 section.cta .cta-content {
