--- a/public/css/prelaunchStyle.css
+++ b/public/css/prelaunchStyle.css
@@ -228,19 +228,26 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 .endBar{
-  background: #330066;
+  background: #FFFFFF;
   padding: 15px;
   text-align: center;
 }
 
-.copyrightText{
+#copyrightText{
   font-family: Lato;
-  padding: 5%;
+  color: #E5A600;
+  padding-top: 0.5%;
+  font-size: 16px;
 }
 
 .socialLink{
   margin-left: 1%;
   margin-right: 1%;
+}
+
+.logo {
+  width: 27px;
+  height: 32px
 }
 
 @media screen and (max-width: 480px){
