Update jQuery for email form

--- a/email-template/welcome-template.hbs
+++ b/email-template/welcome-template.hbs
@@ -59,7 +59,7 @@
                 Retreat is designed to make sure that finding great accommodations
                 with interesting and like-minded travelers is easier than ever.
                 Regardless of your budget, upgrade your excursions by using our
-                platform to crowdfund the travel experience of your dreams! <br><br>
+                platform to split costs for the travel experience of your dreams! <br><br>
                 We're excited to bring you on as our beta testers, and greatly value
                 your opinion. In upcoming weeks we'll be sending you exclusive offers and
                 information available only to you. Join our Facebook group to meet a
