--- a/public/css/prelaunchStyle.css
+++ b/public/css/prelaunchStyle.css
@@ -50,7 +50,6 @@ section.header{
   text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                 0px 8px 13px rgba(0,0,0,0.1),
                 0px 18px 23px rgba(0,0,0,0.1);
-  /*font-size: 72px;*/
   color: white;
 }
 
@@ -62,16 +61,26 @@ section.header{
   color: white;
 }
 
+#headerHelper{
+  padding-top: 5%;
+  font-size: 20px;
+  font-family: Open Sans;
+  color: white;
+  letter-spacing: 2px;
+  text-align: left;
+  /*font-weight: 700;*/
+}
+
 #Buttons{
   text-align: center;
   position: relative;
 
-  margin-top: 20%;
+  margin-top: 10%;
 }
 
 #arrow{
   padding-top: 8px;
-  padding-bottom: 5px;
+  padding-bottom: 3px;
 }
 
 .typewrite{
@@ -106,14 +115,14 @@ section.header{
 section.info{
   width: 100%;
   max-height: 50%;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   background: #B4BFE0;
   text-align: center;
 }
 
 #pg2Header{
-  font-size: 60px;
+  font-size: 48px;
   font-family: Open Sans;
   font-weight: 700;
   letter-spacing: 10px;
@@ -145,7 +154,7 @@ section.signUp{
   width: 100%;
   max-height: 50%;
   padding-top: 2%;
-  padding-bottom: 2%;
+  padding-bottom: 3%;
   background: #272727;
   text-align: center;
 }
@@ -153,7 +162,7 @@ section.signUp{
 #signUpHeader{
   font-family: Open Sans;
   font-weight: 700;
-  font-size: 60px;
+  font-size: 48px;
   letter-spacing: 7px;
   color: white;
   text-shadow: 0px 2px 4px #E5A600;
@@ -228,7 +237,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
 }
 
 .endBar{
-  background: #FFFFFF;
+  background: #efefef;
   padding: 15px;
   text-align: center;
 }
@@ -254,6 +263,7 @@ input::-ms-input-placeholder { /* Microsoft Edge */
   #headerCompanyName{
     font-size: 60px;
     letter-spacing: 15px;
+    text-align: center;
   }
 
   #headerSubtext{
