Updated email resources

--- a/views/welcome-template.hbs
+++ b/views/welcome-template.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:700|Open+Sans:300" rel="stylesheet">
 <title>Welcome</title>
 <style type="text/css">
 
@@ -10,10 +11,51 @@
     .wrapper{width:95% !important;}
   }
 
+  #greeting {
+    font-family: "Lato";
+    font-size: 2em;
+    color: #000000;
+    padding-left: 20px;
+  }
+
+  #content {
+    font-family: "Lato";
+    font-size: 1.1em;
+    color: #000000;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    margin-top: -20px;
+  }
+
+  #tagline {
+    font-family: "Lato";
+    font-size: 1.7em;
+    color: #ffffff;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
+  #social {
+    padding-bottom: 1.6em;
+  }
+
+  #footer {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  #copyright {
+    font-family: "Lato";
+    font-size: 0.8em;
+    color: #E5A600;
+  }
+
 </style>
-<link rel="stylesheet" href="./css/email-style.css">
-<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:700|Open+Sans:300" rel="stylesheet">
+<link rel="stylesheet" href="./email-style.css">
 </head>
+
+<!--HTML-->
 <body style="margin:0; padding:0; background-color:#F8F8F8">
 <center>
 
@@ -127,7 +169,7 @@
                 <tr>
                   <td align="center" valign="top" style="font-size:14px;">
 
-                  <img src="./img/facebook_icon.png" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
+                  <img src="./facebook_icon.png" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
 
                   </td>
                 </tr>
