--- a/views/welcome-template.hbs
+++ b/views/welcome-template.hbs
@@ -72,7 +72,7 @@
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;" bgcolor="#ffffff">
           <tr>
             <td align="center" valign="top">
-              <img src="./img/beach-resort.png" width="600" height="222" style="margin:0; padding:0; border:none; display:block;" border="0" alt=""/>
+              <img src="cid:header-img" width="600" height="222" style="margin:0; padding:0; border:none; display:block;" border="0" alt=""/>
             </td>
           </tr>
         </table>
@@ -154,7 +154,7 @@
                 <tr>
                   <td align="right" valign="top" style="font-size:14px;">
 
-                    <img src="./img/twitter_icon.png" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
+                    <img src="cid:twitter-icon" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
 
                   </td>
                 </tr>
@@ -169,7 +169,7 @@
                 <tr>
                   <td align="center" valign="top" style="font-size:14px;">
 
-                  <img src="./facebook_icon.png" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
+                  <img src="cid:fb-icon" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
 
                   </td>
                 </tr>
@@ -184,7 +184,7 @@
                 <tr>
                   <td align="left" valign="top" style="font-size:14px;">
 
-                    <img src="./img/insta_icon.png" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
+                    <img src="cid:insta-icon" style="margin:0; padding:0; border:none; display:block;" border="0" alt="" />
 
                   </td>
                 </tr>
@@ -217,7 +217,7 @@
       <table id="footer" align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;" bgcolor="#ffffff">
         <tr>
           <td align="left" valign="center">
-            <img src="./img/Asset 1.png" width="20" height="25" style="margin:0; padding:0; border:none; display:block;" border="0" alt=""/>
+            <img src="cid:logo" width="20" height="25" style="margin:0; padding:0; border:none; display:block;" border="0" alt=""/>
           </td>
           <td align="right" valign"top">
               <p id="copyright">© Retreat 2017</p>
