--- a/public/css/prelaunchStyle.css
+++ b/public/css/prelaunchStyle.css
@@ -115,7 +115,6 @@ section.info {
     max-height: 50%;
     padding-top: 2%;
     padding-bottom: 2%;
-    background: ;
     text-align: center;
 }
 
@@ -156,7 +155,7 @@ section.info {
     font-weight: 500;
     font-style: normal;
     color: black;
-    line-height: 67px;
+    line-height: 50px;
     padding-bottom: 23%;
 }
 
@@ -165,7 +164,8 @@ section.signUp {
     max-height: 50%;
     padding-top: 5%;
     padding-bottom: 3%;
-    background: #272727;
+    background-image: url("../img/francesca-saraco-1127612.jpg");
+    background-position: center;
     text-align: center;
 }
 
@@ -254,7 +254,7 @@ input::-ms-input-placeholder {
 }
 
 .endBar {
-    background: #efefef;
+    background: #272727;
     padding: 15px;
     text-align: center;
 }
