--- a/public/css/prelaunchStyle.css
+++ b/public/css/prelaunchStyle.css
@@ -31,6 +31,37 @@ a:active {
     text-decoration: none;
 }
 
+.navbar{
+  background-color: rgba(0,0,0,0.05);
+  border-color: transparent;
+  font-family: Open Sans;
+}
+
+.navbar-brand>img{
+  padding-bottom: 25px;;
+}
+
+.navbar-default .navbar-nav>li>a{
+  color: white;
+}
+.navbar-default .navbar-nav>li>a:hover{
+  color: white;
+  background-color: rgba(0,0,0,0.25);
+}
+.navbar-default .navbar-nav>li>a:active{
+  color: white;
+  background-color: rgba(0,0,0,0.25);
+}
+
+.navbar-nav>li>a{
+  padding-top: 25px;
+  padding-bottom: 20px;
+}
+
+.navbar-default .navbar-toggle{
+  margin-bottom: 22.5px;
+}
+
 section.header {
     padding-top: 2%;
     padding-bottom: 2%;
@@ -54,7 +85,7 @@ section.header {
 }
 
 #headerSubtext {
-    font-size: 32px;
+    font-size: 30px;
     font-family: Open Sans;
     font-weight: 300;
     text-align: center;
@@ -77,7 +108,7 @@ section.header {
     margin-top: 10%;
 }
 
-#arrow {
+.arrow {
     padding-top: 8px;
     padding-bottom: 3px;
 }
@@ -271,12 +302,20 @@ input::-ms-input-placeholder {
     margin-right: 1%;
 }
 
-.logo {
-    width: 73px;
-    height: 46px;
+.LogoImg {
+    width: 56.25px;
+    height: 36.25px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 535px) {
+    #headerCompanyName {
+        font-size: 70px;
+        letter-spacing: 25px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
     #headerCompanyName {
         font-size: 60px;
         letter-spacing: 15px;
